--- a/source/_posts/数字水印技术简介.md
+++ b/source/_posts/数字水印技术简介.md
@@ -16,13 +16,95 @@ tags: [图像处理]
 反正数字水印技术是可以做到这个的啦。
 
 
-# 傅里叶变换
-(参考网址)[blog.jobbole.com/94144/]
-http://blog.csdn.net/abcjennifer/article/details/7622228
-http://blog.jobbole.com/94144/
+# 傅里叶分析
 
+首先是这样一句话：**任何周期函数，都可以看作是不同振幅，不同相位正弦波的叠加。**
+不过直观的是正弦波在时域上的叠加，非直观的是正弦波在频域上的叠加。
 
-http://www.opencv.org.cn/opencvdoc/2.3.2/html/doc/tutorials/core/discrete_fourier_transform/discrete_fourier_transform.html
+傅里叶分析可分为傅里叶级数（Fourier Serie）和傅里叶变换(Fourier Transformation)。
+
+## 傅里叶级数的频谱
+
+### Example1
+某周期信号的时域图像与频域图像的关系，可以说是相当直观了：
+
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170609/113554017.png?imageslim)
+
+### Example2
+
+红色线条是S6(x)原图，很多个蓝色的线条是对红色线条做了多个正弦波的拟合。
+
+ ![mark](http://o9z9uibed.bkt.clouddn.com/image/20170607/205713877.png?imageslim)
+
+对多个正弦波展开，然后在频域上进行投影就可以得到傅里叶级数的频谱（右图蓝色）：
+
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170607/210443615.png?imageslim)
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170607/210532700.png?imageslim)
+
+动图如下：
+
+![](https://upload.wikimedia.org/wikipedia/commons/2/2b/Fourier_series_and_transform.gif)
+
+## 傅里叶变换--时域 转换为 频域
+傅里叶变换，则是将一个**时域非周期**的**连续**信号，转换为一个在**频域非周期**的**连续**信号。
+
+在下图中
+- 傅里叶级数相当于是对时域非周期的连续信号得到一个傅里叶级数的频谱（离散的）
+- 傅里叶变换相当于是将这些离散的频谱点变得连续起来
+ - 怎么由点变成线？直接将频谱点相连。
+ - 如何平滑？增加频谱点的数量，用更多的正弦波去拟合
+
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170609/113655558.png?imageslim)
+
+## 欧拉公式--正弦波的另一种表示形式
+三角函数公式： `f(x)=Asin(ωt+φ)=Asin(2πft+φ)`
+一个正弦波是由下面三个参数决定的：
+- 角速度（频率）ω=2πf
+- 振幅AA
+- 相位φ
+
+除此之外，还可以使用另外一种形式来表示**正弦波**。
+![](http://betterexplained.com/wp-content/uploads/euler/circle_traverse.png)
+
+我们将这个图像在**复数域**中画出为这样(z轴为时间t)：
+
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170609/113732110.png?imageslim)
+
+改变参数之后，这可以代表**任何**一个**正弦波**，可以是实例中很多个正弦波中的某一个。
+
 
 # 数字水印技术
-参考test
+## 图像的傅里叶变换
+上面我们理解了一维的傅里叶变换--**时域**转化为**频域**。
+
+那么二维的傅里叶变换就是--**空域**转化为**频域**。
+
+一个二维傅里叶变换是一维傅里叶变换在每一个**行扫描线**和**列扫描线**上的傅里叶变换的叠加。二维傅里叶变换可以用以下数学公式表达：
+
+![](http://www.opencv.org.cn/opencvdoc/2.3.2/html/_images/math/01858ba01f19b01dc0e6a829755aae109a25f741.png)
+
+傅里叶谱图上的每一个像素点都代表一个频率值，幅值由像素点亮度编码而得。最中心的亮点是指直流分量，傅里叶谱图中越亮的点，对应于灰度图中对比越强烈（对比度越大）的点。
+
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170607/220207044.png?imageslim)
+
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170607/220238262.png?imageslim)
+
+## 具体流程图
+![mark](http://o9z9uibed.bkt.clouddn.com/image/20170609/113055622.png?imageslim)
+## 课程大作业PPT
+
+[答辩PPT](http://o9z9uibed.bkt.clouddn.com/image/20170609/112848710.pdf)
+
+
+# 参考资料
+[知乎帖子：阿里巴巴公司根据截图查到泄露信息的具体员工的技术是什么？
+](https://www.zhihu.com/question/50735753/answer/122593277)
+
+[图像的傅里叶变换](http://blog.rainy.im/2015/11/03/fourier-transform-in-image-processing/)
+
+[傅里叶分析之掐死教程（完整版）更新于2014.06.06](https://zhuanlan.zhihu.com/p/19763358?columnSlug=wille)
+
+[图像傅里叶变换 Rachel-Zhang](http://blog.csdn.net/abcjennifer/article/details/7622228)
+
+[OpenCV傅里叶变换教程](
+http://www.opencv.org.cn/opencvdoc/2.3.2/html/doc/tutorials/core/discrete_fourier_transform/discrete_fourier_transform.html)
